Fix mobile overlay z-index

--- a/crunevo/static/css/style.css
+++ b/crunevo/static/css/style.css
@@ -112,6 +112,8 @@ body {
     height: 0 !important;
     width: 0 !important;
     background: none !important;
+    z-index: -1 !important;
+    position: static !important;
   }
 }
 
